--- a/front/package.json
+++ b/front/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "dotenv": "^6.1.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.3",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
+    "styled-components": "^4.2.0",
     "update": "^0.7.4"
   },
   "scripts": {
