--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "dotenv": "^6.1.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-redux": "^5.0.7",
@@ -13,6 +14,7 @@
     "react-scripts": "^2.1.3",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0",
     "update": "^0.7.4"
   },
