--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^6.1.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.1",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^5.0.0",
