--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "dotenv": "^6.1.0",
+    "formik": "^1.5.7",
     "node-sass": "^4.12.0",
     "react": "^16.8.1",
     "react-bootstrap": "^1.0.0-beta.8",
@@ -17,7 +18,8 @@
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0",
-    "update": "^0.7.4"
+    "update": "^0.7.4",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
